# nano2-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hostfile  txt.txt  à
ckpts/: best.meta.json
ckpts_mix/: best.meta.json
configs/: nano2.json
cpu-fw/: main.c  main_serial.c
cpu-fwandbw/: main.c  main_serial.c
include/: log.h  nano2.h  utils.h
scripts/: build.sh  nvcc-wrap.sh  run_local.sh  run_mpi.sh
src/: atomic_utils.cuh  chat.c  chat.h  checkpoint.c  checkpoint.h  config.c  cuda_check.h  data.c  main.c  model.c  nano2_model.h  optim.cu  tensor.c  train_backward.cu  train_forward.cu  utils.c  à
src/cuda/: attention.cu  attention_backward.cu  dummy_kernels.cu  embed.cu  embed.h  gelu.cu  gemm.cu  layernorm.cu  layernorm.h  loss.cu  softmax.cu  train_forward.cu
test-fw/: main.c
test-fwandbw/: main.c  main_serial.c
tools/: tokenizer.c
